<resources>
    <string name="app_name">正畸助手</string>
    <string name="search_pages">搜索文章</string>
    <string name="cancel">取消</string>
    <string name="title_1">牙套管家</string>
    <string name="single_line_input">1天</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_personalinformation">个人资料</string>
    <string name="text_loginstatus">未登录（点击登陆）</string>
    <string name="log_out">已登陆（点击注销）</string>
    <string name="text_mine">我的</string>
    <string name="text_person">个人资料</string>
    <string name="text_selfhelp">自助牙医诊断</string>
    <string name="text_braces">牙套管家设置</string>
    <string name="personal_information">个人信息</string>
    <string name="log_in">登陆</string>
    <string name="text_chew">1.咀嚼功能完整度</string>
    <string name="text_personaldata">个人信息</string>
    <string name="text_name">姓名</string>
    <string name="text_birthday">出生日期</string>
    <string name="doctor_help">2.期望从医生获得的帮助</string>
    <string name="other_information">3.附加信息（过敏史及其他疾病等）</string>
    <string name="submit">提交</string>
    <string name="inputName">请输入你的姓名</string>
    <string name="inputBirthday">请输入你的生日:年/月/日</string>
    <string name="text_camera_1">1.拍照</string>
    <string name="text_camera_description">请上传示意照片，最好是朋友协助拍摄，医生能够更加系统地了解您的口腔问题。</string>
    <string name="diagnoseBack">诊断结果</string>
    <string name="messagelist">消息列表</string>
</resources>
