<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DentistDiagnosisActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/toolbar_in_self_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorIndicator"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageButton
                    android:id="@+id/self_help_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="0dp"
                    android:background="@color/colorIndicator"
                    app:srcCompat="?attr/actionModeCloseDrawable" />

                <TextView
                    android:id="@+id/self_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="20dp"
                    android:text="@string/text_selfhelp" />


            </RelativeLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/text_personaldata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="600dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/text_personaldata"
            android:textSize="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_in_self_help"/>
        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_name"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_personaldata" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="32dp"
            android:hint="@string/inputName"
            android:ems="10"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.836"
            app:layout_constraintStart_toEndOf="@+id/text_name" />

        <TextView
            android:id="@+id/text_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/text_birthday"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_name" />

        <EditText
            android:id="@+id/editText_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/inputBirthday"
            android:textAlignment="center"
            android:inputType="date"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_birthday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/text_birthday" />

        <TextView
            android:id="@+id/text_chew"
            android:layout_width="208dp"
            android:layout_height="29dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/text_chew"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_birthday" />

        <ImageButton
            android:id="@+id/imageButton_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@+id/imageButton_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_chew"
            app:srcCompat="@android:drawable/ic_media_ff" />

        <ImageButton
            android:id="@+id/imageButton_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@+id/imageButton_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton_1"
            app:layout_constraintTop_toBottomOf="@+id/text_chew"
            app:srcCompat="@android:drawable/ic_media_next" />

        <ImageButton
            android:id="@+id/imageButton_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@+id/imageButton_4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton_2"
            app:layout_constraintTop_toBottomOf="@+id/text_chew"
            app:srcCompat="@android:drawable/ic_media_pause" />

        <ImageButton
            android:id="@+id/imageButton_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton_3"
            app:layout_constraintTop_toBottomOf="@+id/text_chew"
            app:srcCompat="@android:drawable/ic_media_previous" />

        <TextView
            android:id="@+id/text_expecthelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/doctor_help"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_1" />

        <EditText
            android:id="@+id/editText_expecthelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:maxLines="6"
            android:scrollbars="vertical"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_expecthelp" />

        <TextView
            android:id="@+id/text_addinformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/other_information"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_expecthelp" />

        <EditText
            android:id="@+id/editText_addinformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:maxLines="6"
            android:scrollbars="vertical"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_addinformation" />

        <Button
            android:id="@+id/submit_self_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:background="@color/submit_button"
            app:layout_constraintTop_toBottomOf="@+id/editText_addinformation"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>